--- a/query_dialog.ui
+++ b/query_dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Query</string>
   </property>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
@@ -26,7 +26,7 @@
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>请输入物品名称，每样物品一行。</string>
+       <string>Please input name of goods you are searching.</string>
       </property>
      </widget>
     </item>
@@ -44,7 +44,7 @@
     <rect>
      <x>30</x>
      <y>240</y>
-     <width>341</width>
+     <width>354</width>
      <height>32</height>
     </rect>
    </property>
